--- a/lib/fawkes_web/templates/category/index.html.eex
+++ b/lib/fawkes_web/templates/category/index.html.eex
@@ -14,6 +14,7 @@
       <tr>
         <td><%= category.name %></td>
         <td><%= category.slug %></td>
+        <td><a href="/categories/<%= category.id %>">Show</a>
       </tr>
   <% end %>
   </tbody>
