fix path and signup

--- a/lib/fawkes_web/templates/layout/app.html.eex
+++ b/lib/fawkes_web/templates/layout/app.html.eex
@@ -28,7 +28,7 @@
             <li><a href="/speakers">Speakers</a></li>
             <li><a href="/schedule_slots">Talks</a></li>
               <%= if is_nil @conn.assigns[:current_user] do %>
-                <li><%= link gettext("Get Started"), to: signup_user_path(@conn, :new) %></li>
+                <li><%= link gettext("Create Account"), to: signup_user_path(@conn, :new) %></li>
                 <li><%= link gettext("Log In"), to: auth_user_path(@conn, :new) %></li>
               <% else %>
                 <li><%= link gettext("Logout"), to: auth_user_path(@conn, :delete), method: :post%></li>
