added profile s3 not working

--- a/lib/fawkes_web/templates/speaker/show.html.eex
+++ b/lib/fawkes_web/templates/speaker/show.html.eex
@@ -1,3 +1,9 @@
+<%=
+  {@speaker.image, @speaker}
+  |> Fawkes.Uploader.Image.url()
+  |> img_tag()
+%>
+
 <div class="container speaker-details">
   <div class="card details">
     <div class="card-body">
