--- a/lib/fawkes_web/templates/layout/app.html.eex
+++ b/lib/fawkes_web/templates/layout/app.html.eex
@@ -31,7 +31,7 @@
                 <li><%= link gettext("Create Account"), to: signup_user_path(@conn, :new) %></li>
                 <li><%= link gettext("Log In"), to: auth_user_path(@conn, :new) %></li>
               <% else %>
-                <li><%= link gettext("Logout"), to: auth_user_path(@conn, :delete), method: :post%></li>
+                <li><%= link gettext("Logout"), to: user_path(@conn, :delete), method: :post%></li>
               <% end %>
             </ul>
         </nav>
