--- a/lib/fawkes_web/templates/layout/app.html.eex
+++ b/lib/fawkes_web/templates/layout/app.html.eex
@@ -15,6 +15,8 @@
 
 
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
 
   <body class="body">
@@ -42,6 +44,7 @@
         <%= render @view_module, @view_template, assigns %>
       </main>
     </div> <!-- /container -->
+
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
